--- a/documentation/modules/ROOT/nav.adoc
+++ b/documentation/modules/ROOT/nav.adoc
@@ -1,8 +1,8 @@
-* xref:001_accessing_ACM.adoc[ACM Introduction]
-** xref:002_cluster_lifecycle.adoc[Cluster lifecycle]
-** xref:003_create_cluster.adoc[Create cluster]
-** xref:004_adding_a_cluster_to_ACM.adoc[Adding a cluster to ACM]
-*  xref:006_hcp_introduction.adoc[HCP Introduction]
-** xref:007_explore_environment.adoc[Explore HCP Environment]
-** xref:008_deploy_cluster.adoc[Deploy HCP cluster]
+* xref:001_architectural_review.adoc[DevSpaces Architecture]
+* xref:002_operator_management.adoc[Operator Management]
+* xref:003_create_cluster.adoc[Create cluster]
+* xref:004_adding_a_cluster_to_ACM.adoc[Adding a cluster to ACM]
+* xref:006_hcp_introduction.adoc[HCP Introduction]
+* xref:007_explore_environment.adoc[Explore HCP Environment]
+* xref:008_deploy_cluster.adoc[Deploy HCP cluster]
 * xref:005_governance.adoc[Governance]
