--- a/documentation/modules/ROOT/pages/index.adoc
+++ b/documentation/modules/ROOT/pages/index.adoc
@@ -4,9 +4,25 @@
 
 image::Dev_Spaces-Standard-CMYK.jpg[DevSpaces Logo,width=190px,float="Left",align="center"]
 
+== *OpenShift Dev Spaces Introduction*
+
+OpenShift Dev Spaces is a container based development environment that runs on the OpenShift cluster. Dev Spaces provides the following.
+
+* A secure environment for development, running on OpenShift - Because Dev Spaces environments run on OpenShift they inherit the security of the OpenShift cluster. It is not necessary for any code, or other business assets, to be stored on a laptop or other computer. 
+
+* A connection to the right container registries, OpenShift clusters and data repositories - Dev Spaces provides connectivity to container registries so that the right images are pulled and images are pushed to the correct place. It also provides connections to the OpenShift cluster on which it runs, to enable teams to deploy microservices such tat they ca be integrated into a wider application. Finally, Dev Spaces provides connections to Git repositories so that development teams can access and update the code for which they are responsible.
+
+* A curated set of commands to accelerate development and ensure consistency - Dev Spaces environments contain commands that are executed regularly,  such as compiling applications, so that there is consistency across development teams.
+
+* A familiar editor using either VS Code or IntelliJ IDEA - Users and organisations have their preferences for Integrated Development Environments (IDEs) and DevSpaces offers a choice between VS Code and IntelliJ editors. Extensions for each editor environment can be added to Dev Spaces to further personalise the development experience.
+
+* A platform optimized for low resource consumption - Dev Spaces environments consume a fraction of the compute and memory resources of a virtual machine that may otherwise be use for a development environment. The containerised development environment is executed on a node of an OpenShift cluster orchestrated by the Kubernetes platform to ensure an appropriate distribution of workload amongst the nodes. This helps ensure a high density of Dev Spaces in the cluster and the optimal usage of physical resources.
+
+* A terminal for command line operations - Each Dev Spaces environment includes a terminal with access to the source code that has been cloned from one of the Git repositories. This enables developers to perform any ad-hoc operations they need, based on executables that are included in the container image on which the environment is based.
+
 == *An Introduction to OpenShift DevSpaces*
 
-This workshop will guide you through the use of Red Hat OpenShift DevSpaces ....
+This workshop will guide you through the use of Red Hat OpenShift DevSpaces both as a user and as a platform administrator.
 
 == *Workshop infrastructure*
 
